[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pokemon/Charmander.png" type="Texture" id=1]
[ext_resource path="res://Pokemon/Charmeleon.png" type="Texture" id=2]
[ext_resource path="res://UI UX/EvolutionAnimator.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform float flashScale :hint_range(0,1) = 0.5;

void fragment(){
	vec4 pixelColor = texture(TEXTURE,UV);
	COLOR = mix(pixelColor , color,flashScale);
	COLOR *= pixelColor.a;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashScale = 0.0

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flashScale = 0.0

[sub_resource type="Animation" id=7]
resource_name = "Fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("EvolutionAnimator/FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EvolutionAnimator")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FinishEvolution"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EvolutionAnimator/Pokemon_evoluter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EvolutionAnimator/Pokemon_base:material:shader_param/flashScale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EvolutionAnimator/Pokemon_base:material:shader_param/color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EvolutionAnimator/Pokemon_base:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EvolutionAnimator/Pokemon_evoluter:material:shader_param/flashScale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EvolutionAnimator/Pokemon_evoluter:material:shader_param/color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EvolutionAnimator/Flash:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EvolutionAnimator/BackCover:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("EvolutionAnimator/FadeOut:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "evolve"
length = 4.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("EvolutionAnimator/Pokemon_evoluter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.58, 1.96, 2.29, 2.52, 2.71, 2.79, 2.88, 2.94, 2.99, 3.03 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EvolutionAnimator/Pokemon_base:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.1, 1.76, 2.08, 2.4, 2.62, 2.76, 2.87, 2.95, 3.01 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EvolutionAnimator/Pokemon_base:material:shader_param/flashScale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EvolutionAnimator/Pokemon_evoluter:material:shader_param/color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EvolutionAnimator/Pokemon_evoluter:material:shader_param/flashScale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.58, 4.37 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("EvolutionAnimator/Pokemon_base:material:shader_param/color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EvolutionAnimator/Flash:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3, 3.03, 3.06, 3.08 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EvolutionAnimator/BackCover:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.6, 3.02, 3.08 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("EvolutionAnimator")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "EvolutionDone"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("EvolutionAnimator/FadeOut:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}

[node name="EvolutionAnimator" type="Node2D"]
position = Vector2( 120, 80 )
z_index = 12
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = 80.0
color = Color( 0.0901961, 0.0666667, 0.301961, 1 )

[node name="BackCover" type="ColorRect" parent="."]
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 0 )

[node name="Pokemon_base" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0.204193, 34.5009, 62.9139, 62.6313 )

[node name="Pokemon_evoluter" type="Sprite" parent="."]
material = SubResource( 6 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.204193, 34.5009, 62.9139, 62.8883 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/Fade_out = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/evolve = SubResource( 4 )

[node name="Flash" type="ColorRect" parent="."]
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = 80.0
color = Color( 1, 1, 1, 0 )

[node name="FadeOut" type="ColorRect" parent="."]
margin_left = -120.0
margin_top = -80.0
margin_right = 120.0
margin_bottom = 80.0
color = Color( 0, 0, 0, 0 )

[node name="DialogLayer" type="Node2D" parent="."]
position = Vector2( -120, -80 )
z_index = 2
